# agentic-os

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  MEMORY-RUNBOOK.md  MEMORY-SPEC.md  UI-SPEC.md
scripts/: build-markitdown-sidecar.mjs  sync-desktop-app.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: approval.rs  audit.rs  commands.rs  control_models.rs  db.rs  discovery.rs  error.rs  lib.rs  main.rs  models.rs  orchestrator.rs  policy.rs  snapshot.rs
src-tauri/src/harness/: codex.rs  mod.rs  structured.rs
src-tauri/src/memory/: context.rs  frontmatter.rs  importer.rs  index.rs  maintenance.rs  mod.rs  pdf_extraction.rs  persist.rs  pipeline.rs  proposals.rs  retrieval.rs  vault.rs
src/app/: providers.test.ts  providers.tsx  query-client.ts  router.tsx
src/components/layout/: app-shell.test.tsx  app-shell.tsx
src/components/ui/: approval-card.tsx  coming-soon-page.tsx  diff-view.tsx  info-tooltip.tsx  live-log.tsx  metric-card.tsx  nav-badge.tsx  section-empty-state.tsx  status-badge.tsx  step-checklist.tsx  task-card.tsx  trace-timeline.tsx
src/features/approvals/: api.ts  approvals-page.tsx  hooks.ts  mock-data.ts  schema.ts
src/features/audit/: api.ts  audit-page.tsx  hooks.ts  mock-data.ts  schema.ts
src/features/catalog/: catalog-page.tsx
src/features/control/: api.ts  schema.ts  use-control-status.ts
src/features/dashboard/: api.ts  mock-data.ts  schema.ts  use-dashboard-snapshot.ts
src/features/memory/: api.ts  binary.ts  document-import-panel.tsx  hooks.ts  memory-page.test.tsx  memory-page.tsx  schema.ts
src/lib/: format.ts  status.ts  tauri.ts
src/store/: task-events.ts  workbench.ts
tools/markitdown-sidecar/: main.py  requirements.txt
(+6 files in other folders)
