[package]
name = "agent-control"
version = "0.1.0"
description = "Desktop control plane for local agents, skills, routines, and usage"
authors = ["FCHIODO"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agent_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri-plugin-log = "2"
tauri = { version = "2.11.2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
serde_yaml = "0.9"
glob = "0.3"
similar = "2"
